# pycrostates-report

./: .flake8  .gitignore  BH_GEV.ipynb  EEG Introduction.ipynb  Generate EEG Bids Dataset.ipynb  Hover_images.ipynb  Images_visualisation_updated.ipynb  README.md  UMAP.ipynb  dockerfile  pyproject.toml  report.ipynb  requirements.txt  sample.ipynb
.ipynb_checkpoints/: EEG Introduction-checkpoint.ipynb  Hover_images-checkpoint.ipynb  sample-checkpoint.ipynb
pycrostates_report/: __init__.py
pycrostates_report/commands/: cluster.py
pycrostates_report/report/: __init__.py  report.py
pycrostates_report/report/templates/: report.jinja
